Fixing bugs, back to being fairly stable.  Errors when king moves.

--- a/README
+++ b/README
@@ -22,4 +22,8 @@
 
 By compiling, editing, or running any of Fly By Knight's code, you accept everything stated above.
 
-xboard/winboard protocol: http://www.gnu.org/software/xboard/engine-intf.html
+XBoard/WinBoard information: 
+http://www.gnu.org/software/xboard/
+
+xboard/winboard protocol: 
+http://www.gnu.org/software/xboard/engine-intf.html
