update readme to reflect new Boost dependancy, add thread to take continous input, incorporating steped breadth first searching, breakout to pick move needed. Move methods not working perfectally?

--- a/TODO
+++ b/TODO
@@ -1,1 +1,3 @@
-convert all piece::getMoves(vector<int> &moves) to piece::getMoves(vector<string> &moves) to simplify moving between moves with movetree
+Check move() methods
+Find search cut off
+Tweek algorithm constants and ratios
