--- a/README
+++ b/README
@@ -14,6 +14,7 @@
 
 	Fly By Knight is an amateur chess engine currently implementing the xboard/winboard chess protocol.  The code is written in C++.  Main development and support is for the x86_64 Linux Kernel.  The code is written as portable as possible for easy porting to Windows and other kernels.
 
+	- To use the opening book, copy "book.fbk" into the directory Fly By Knight is run from.  After every game, if result is sent (e.g. 'result 1-0 {White mates.}'), Fly By Knight will record the result to the book.  After enough games are played moves may be based from the book.
 	- Requires g++ to compile with Make
 	- Requires Boost C++ Compiled Libraries >= 1.51.0
 		-$BOOT_ROOT set to boost directory
