--- a/README
+++ b/README
@@ -21,6 +21,8 @@ https://git.sandorlaboratories.com/edward/fly-by-knight/-/tree/rewrite
 
 	Fly By Knight is an amateur chess engine currently implementing the xboard/winboard chess protocol.  The code is written in C++.  Main development and support is for the x86_64 Linux Kernel.  The code is written as portable as possible for easy porting to Windows and other kernels.
 
+	To use the opening book, copy "book.fbk" into the directory Fly By Knight is run from.  After every game, if result is sent (e.g. 'result 1-0 {White mates.}'), Fly By Knight will record the result to the book.  After enough games are played moves may be based from the book.
+
 	- Requires g++ to compile with Make
 	- Depends on the POSIX pthread library
 	- Simply type 'make' to compile.
