--- a/README
+++ b/README
@@ -1,3 +1,10 @@
+################################################################################################################################
+REWRITE IN PROGRESS 
+The 'master' branch of this repository is no longer maintained.  All active development is currently on the 'rewrite' branch.  Once the rewrite is on par functionally, it will be slammed to the 'master' branch.
+https://git.sandorlaboratories.com/edward/fly-by-knight/-/tree/rewrite
+################################################################################################################################
+
+
 	################################
 	# Fly By Knight - Chess Engine #	September 2011 - 2012
 	################################
