--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 ################################################################################################################################
 REWRITE IN PROGRESS 
-The 'master' branch of this repository is no longer maintained.  All active development is currently on the 'rewrite' branch.  Once the rewrite is on par functionally, it will be slammed to the 'master' branch.
-https://git.sandorlaboratories.com/edward/fly-by-knight/-/tree/rewrite
+The 'v0.x.x' branch of this repository is no longer maintained.  All active development is currently on the 'v.x.x' branch.  Once the rewrite is on par functionally, it will become the default branch.
+https://git.sandorlaboratories.com/edward/fly-by-knight/-/tree/v1.x.x
 ################################################################################################################################
 
 
